--- a/.github/workflows/test-docker-build.yaml
+++ b/.github/workflows/test-docker-build.yaml
@@ -26,7 +26,15 @@ jobs:
   # - https://github.com/docker/build-push-action/blob/v2.3.0/docs/advanced/local-registry.md
   # - https://github.com/docker/build-push-action/blob/v2.3.0/docs/advanced/multi-platform.md
   build_images:
-    runs-on: ubuntu-20.04
+    runs-on: ${{ matrix.runner }}
+
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - runner: ARM64
+          - runner: ubuntu-20.04
+
     steps:
       - uses: actions/checkout@v2
         with:
@@ -35,6 +43,7 @@ jobs:
           fetch-depth: 0
 
       - uses: actions/setup-python@v2
+        if: matrix.runner != 'ARM64'
         with:
           python-version: "3.8"
 
