--- a/.github/workflows/test-docker-build.yaml
+++ b/.github/workflows/test-docker-build.yaml
@@ -57,14 +57,12 @@ jobs:
       - name: Install chartpress
         run: pip install chartpress
 
-      - name: Set up QEMU (for docker buildx)
-        uses: docker/setup-qemu-action@27d0a4f181a40b142cce983c5393082c365d1480 # dependabot updates to latest release
+      # - name: Set up QEMU (for docker buildx)
+      #   uses: docker/setup-qemu-action@27d0a4f181a40b142cce983c5393082c365d1480 # dependabot updates to latest release
 
-      - name: Set up Docker Buildx (for chartpress multi-arch builds)
-        uses: docker/setup-buildx-action@abe5d8f79a1606a2d3e218847032f3f2b1726ab0 # dependabot updates to latest release
+      # - name: Set up Docker Buildx (for chartpress multi-arch builds)
+      #   uses: docker/setup-buildx-action@abe5d8f79a1606a2d3e218847032f3f2b1726ab0 # dependabot updates to latest release
 
-      - name: Build a multiple architecture Docker image
+      - name: Build an arm64 Docker image
         run: >-
           chartpress
-          --builder docker-buildx
-          --platform linux/amd64 --platform linux/arm64
